--- a/note/1.md
+++ b/note/1.md
@@ -1,4 +1,5 @@
 ## 备忘记录一些软件配置
 #### Latex在线编程网站 `https://www.overleaf.com/`
 #### 删除双系统的ubuntu，可以直接用`DiskGenius`删除System区的`/EFI/ubuntu`文件夹
-#### Sublime: python环境需要安装`package control`,`channel.json文件`,`sublime REPL插件` &emsp;&emsp;&emsp;&emsp;&emsp;c++环境需要设置`sublime_build`才能出现输入框
+#### Sublime: python环境需要安装`package control`,`channel.json文件`,`sublime REPL插件`
+#### &emsp; &emsp; &emsp; &emsp; c++环境需要设置`sublime_build`才能出现输入框
